WIP increase coverage of VisitorsBridge